--- a/cart/templates/includes/cart_item.html
+++ b/cart/templates/includes/cart_item.html
@@ -9,14 +9,14 @@
           {% if item.product.image.url %}    
           <img
           src="{{item.product.image.url}}"
-          alt="product image"
+          alt="Product {{item.product.name}}"
           class="img-fluid d-none d-md-block rounded mb-2 border border-black-50"
           style="height: 100px;  width: 100px; object-fit: cover;"
         >
         {% else %}
         <img
         src="{% static 'images/award-placeholder.webp' %}"
-        alt="product image"
+        alt="Product {{item.product.name}}"
         class="img-fluid d-none d-md-block rounded mb-2 bg-{{item.product.color}} border border-black-50"
         style="height: 100px;   width: 100px; object-fit: cover;"
       >
@@ -24,7 +24,7 @@
        
         </div>
         <div class="col-md-9 text-left mt-sm-2">
-          <h4 class='cart-title'>{{item.product.name}}</h4>
+          <h2 class='cart-title h4'>{{item.product.name}}</h2>
           <p class="font-weight-light text-secondary d-none d-sm-block">
             {{item.product.description}}
           </p>
