--- a/profiles/static/profiles/css/profiles.css
+++ b/profiles/static/profiles/css/profiles.css
@@ -2,7 +2,6 @@
 
 .subscription .header {
   padding: 45px 10px 70px;
-  color: #fff;
   position: relative;
   margin-bottom: 15px;
 }
@@ -10,12 +9,10 @@
 .subscription .header > h2 {
   margin: 0;
   line-height: 100%;
-  color: #fff;
   font-weight: 100;
   font-size: 50px;
 }
 .subscription .header > h2 small {
-  color: #fff;
   letter-spacing: 0;
   vertical-align: top;
   font-size: 16px;
@@ -44,20 +41,19 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  color: #fff;
+  color: black;
   display: inline-block;
   line-height: 60px;
   font-size: 30px;
   border: none;
   box-shadow: var(--btn-box-shadow);
+  outline: 1px solid black;
 }
 
-.form-btn:not(:disabled):hover,
-.form-btn:not(:disabled):focus {
-  filter: brightness(0.9);
-  outline: 1px solid black;
-  transition: all 0.3s ease-in-out;
-  color: black;
+.form-btn:hover,
+.form-btn:focus {
+  filter: brightness(0.8);
+  color: white;
 }
 
 .form-btn:disabled {
