Update accessibility on order pages, preview cards #64

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -43,7 +43,7 @@
                     </div>
                     <div class="feed-item-list">
                       <div>
-                        <h5 class="font-size-16 mb-1">User Info</h5>
+                        <h2 class="mb-1">User Info</h2>
                         <p class="text-muted mb-4">
                           Changing username/email will only affect this order
                         </p>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="feed-item-list">
                       <div>
-                        <h5 class="font-size-16 mb-1">Payment Info</h5>
+                        <h2 class="h5 mb-1">Payment Info</h2>
                         <p class="text-muted text-truncate mb-4">
                           Enter your payment information
                         </p>
@@ -175,10 +175,10 @@
           <div class="card checkout-order-summary">
             <div class="card-body">
               <div class="p-3 bg-light mb-3">
-                <h5 class="font-size-16 mb-0">
+                <h2 class="2 mb-0">
                   Order Summary
                   <span class="float-end ms-2">({{ product_count }})</span>
-                </h5>
+                </h2>
               </div>
               {% for item in cart_items %}
       
