--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -7,11 +7,17 @@
 {% endblock %} 
 
 {% block page_header %}
-<div class="container header-container">
-  <div class="row">
-    <div class="col"></div>
+<header class="bg-dark">
+  <div class="container px-4 px-lg-5 my-5">
+    <div class="text-center text-white">
+      <h1 class="display-4 fw-bolder">Order Confirmation</h1>
+      <p class="lead fw-normal text-white-50 mb-0">
+        Order: {{ order.order_number }}  
+      </p>
+
+    </div>
   </div>
-</div>
+</header>
 {% endblock %} {% block content %}
 <div class="overlay"></div>
 
