--- a/profiles/templates/includes/my_courses_card.html
+++ b/profiles/templates/includes/my_courses_card.html
@@ -1,18 +1,18 @@
 <div class="col">
     <a class="card program-card shadow border-grey overflow-hidden" href="{% url 'program_detail' program.id %}" title='Link to {{program.name}}'>
-      <div class="row">
-        <article class="col-lg-4 order-lg-2 bg-dark p-0">
+      <article class="row">
+        <div class="col-lg-4 order-lg-2 bg-dark p-0">
           <img
             src="{{ program.image.url }}"
             class="card-image"
-            alt="Image"
+            alt="Program {{program.name}}"
           >
         </div>
         <div class="col-lg-8">
           <div class="card-body">
-            <h5 class="text-primary fw-bold">
+            <h2 class="h5 text-primary fw-bold title border-bottom p-0 mb-1">
                 {{program.name}}
-            </h5>
+            </h2>
             <p class="card-text text-secondary pb-2 border-bottom">
               {{program.description}}
             </p>
@@ -52,7 +52,7 @@
             </div>
           </div>    
           </div>
-        </article>
-      </div>
+        </div>
+      </article>
     </a>
   </div>
