--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -38,7 +38,7 @@
             </div>
             <form action="#" method="POST">
               {% csrf_token %}
-              <h5 class="font-size-16 mb-1">User Info</h5>
+              <h2 class="h5 mb-1">User Info</h2>
               <p class="text-muted text-truncate mb-4">Your profile details</p>
               <div class="mb-3">
                 <div>
@@ -80,10 +80,17 @@
               id="profile-update-form"
             >
               {% csrf_token %}
-              <h5 class="font-size-16 mb-1">Delivery Info</h5>
+              <h2 class="h5 mb-1">Delivery Info</h2>
               <p class="text-muted text-truncate mb-4">Your delivery details</p>
 
-              <div class="feed-item-list mb-3">{{profile_form | crispy}}</div>
+              <div class="feed-item-list mb-3">      
+
+
+                {{profile_form | crispy}}
+              </div>
+         
+
+
 
               <button type="submit" class="my-4 btn btn-primary float-right">
                 Update Delivery
