Update accessibility on program detail page #64

--- a/products/templates/includes/related_items.html
+++ b/products/templates/includes/related_items.html
@@ -20,7 +20,7 @@
           <div class="card-body p-4">
             <div class="text-center">
               <!-- Item name-->
-              <h5 class="fw-bolder">{{related.name}}</h5>
+              <h3 class="h5 fw-bolder">{{related.name}}</h3>
               <!-- Item reviews-->
               <div class="d-flex justify-content-center small text-warning mb-2">
                 {% for i in related.rating_array %}
