--- a/home/templates/includes/carousel.html
+++ b/home/templates/includes/carousel.html
@@ -37,7 +37,7 @@
           alt="testimonial person 1"
         >
       </div>
-      <h3 class="h4 mt-1">CSS Programming</h3>
+      <h3 class="h4 mt-1">Cozy Knit Jumper</h3>
       <div class="star-rating">
         <ul class="list-inline">
           <li class="list-inline-item">
@@ -58,7 +58,7 @@
         </ul>
       </div>
       <p class="testimonial text-center mx-auto">
-        The CSS programming course provided an invaluable foundation for my web development journey. Through clear explanations and hands-on exercises, I gained mastery in styling web pages with precision and creativity. This course not only elevated my skills but also empowered me to create visually stunning and user-friendly websites with confidence.
+        Warmth meets tech in this cozy knit jumper. Perfect for coding or casual wear, it's both stylish and comfortable.
       </p>
       <strong class="overview text-center mx-auto">Gold Berry</strong>
     </div>
@@ -70,7 +70,7 @@
           alt="testimonial person 2"
         >
       </div>
-      <h3 class="h4 mt-1">Python Programming</h3>
+      <h3 class="h4 mt-1">Mastering Flexbox and Grid Layouts</h3>
       <div class="star-rating">
         <ul class="list-inline">
           <li class="list-inline-item">
@@ -91,7 +91,7 @@
         </ul>
       </div>
       <p class="testimonial text-center mx-auto">
-        The Python programming course was a transformative experience that ignited my passion for coding. With engaging lessons and practical projects, I swiftly grasped Python's versatility and efficiency. Thanks to this course, I now have the skills to develop robust software solutions and pursue exciting opportunities in the tech industry.
+        The stress relief ball is a lifesaver! Instantly soothing, it's a must-have for relieving tension and stress.
       </p>
       <strong class="overview text-center mx-auto">Darrach Barneveld</strong>
     </div>
@@ -103,7 +103,7 @@
           alt="testimonial person 3"
         >
       </div>
-      <h3 class="h4 mt-1">Java Programming</h3>
+      <h3 class="h4 mt-1">Stress Relief Ball</h3>
       <div class="star-rating">
         <ul class="list-inline">
           <li class="list-inline-item">
@@ -123,7 +123,8 @@
           </li>
         </ul>
       </div>
-      <p class="testimonial text-center mx-auto">The Java programming course was instrumental in shaping my understanding of object-oriented programming. With comprehensive tutorials and challenging assignments, I honed my skills in Java development and problem-solving. This course equipped me with the expertise needed to tackle complex projects and thrive in the dynamic world of software engineering.
+      <p class="testimonial text-center mx-auto">
+        Mastering Flexbox and Grid Layouts course is a game-changer! Clear, concise, and practical lessons make learning a breeze
       </p>
       <strong class="overview text-center mx-auto">Tom Bombadil</strong>
     </div>
