Include extra titles on all pages #64

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %} 
 {% load static %} 
 
+
+{% block extra_title %}{{product.name}}{% endblock %}
+
 {% block page_header %}
 <header class="bg-dark">
   <div class="container px-4 px-lg-5 my-5">
