--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -1,6 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_title %}Programs{% endblock %}
+
+
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'programs/css/programs.css' %}">
 {% endblock %}
