--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block extra_title %}Cart{% endblock %}
+
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'cart/css/cart.css' %}">
