Embed Mailchimp signup newsletter form #65

--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -37,3 +37,11 @@
 .carousel-indicators .active {
   background-color: var(--primary-orange);
 }
+
+/* MAILCHIMP */
+
+#mc_embed_signup {
+  background: transparent;
+  font: 14px Helvetica, Arial, sans-serif;
+  width: 600px;
+}
