--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -42,6 +42,18 @@
 
 #mc_embed_signup {
   background: transparent;
+  clear: left;
   font: 14px Helvetica, Arial, sans-serif;
-  width: 600px;
+  min-width: 300px;
+}
+
+#mc_embed_signup .helper_text {
+  background-color: transparent !important;
+}
+#mc_embed_signup div.response {
+  padding: 0 !important;
+}
+
+#mc_embed_signup .mc-field-group {
+  padding-bottom: 0 !important;
 }
