--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -158,111 +158,118 @@
       </div>
     {% include "includes/carousel.html" %}
 
-      <!-- Call to action-->
-      <aside class="bg-orange bg-gradient rounded-3 p-4 p-sm-5 mt-5">
-        <div
-          class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
-        >
-          <div class="mb-4 mb-xl-0">
-            <div class="fs-3 fw-bold text-white">
-              New products and courses every year.
-            </div>
-            <div class="text-white">
-              Sign up to our newsletter for exclusive offers and updates.
-            </div>
-          </div>
-          <div id="mc_embed_shell">
-            <div id="mc_embed_signup">
-              <form
-                action="https://herokuapp.us11.list-manage.com/subscribe/post?u=d4616ca128cb857ad279711e3&amp;id=d8a843f98b&amp;f_id=00aab1e0f0"
-                method="post"
-                id="mc-embedded-subscribe-form"
-                name="mc-embedded-subscribe-form"
-                class="validate"
-                target="_blank"
-              >
-                <div id="mc_embed_signup_scroll">
-                  <div class="indicates-required text-white">
-                    <span class="asterisk">*</span> indicates required
-                  </div>
-                  <div class="mc-field-group text-white">
-                    <label for="mce-EMAIL"
-                      >Email Address <span class="asterisk">*</span></label
-                    ><input
-                      type="email"
-                      name="EMAIL"
-                      class="required email"
-                      id="mce-EMAIL"
-                      required=""
-                      value=""
-                    /><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
-                  </div>
-                  <div id="mce-responses" class="clear foot">
-                    <div
-                      class="response"
-                      id="mce-error-response"
-                      style="display: none"
-                    ></div>
-                    <div
-                      class="response"
-                      id="mce-success-response"
-                      style="display: none"
-                    ></div>
-                  </div>
-                  <div aria-hidden="true" style="position: absolute; left: -5000px">
-                    /* real people should not fill this in and expect good things - do not
-                    remove this or risk form bot signups */
-                    <label for="bot-signup-input" style="display: none;">Bot Signup Input</label>
-                    <input type="text" name="b_d4616ca128cb857ad279711e3_d8a843f98b" id="bot-signup-input" tabindex="-1" value="" aria-hidden="true" />
-
-                  </div>
-                  <div class="optionalParent">
-                    <div class="clear foot">
-                      <input
-                        type="submit"
-                        name="subscribe"
-                        id="mc-embedded-subscribe"
-                        class="button"
-                        value="Subscribe"
-                      />
-                      <p style="margin: 0px auto">
-                        <a
-                          href="http://eepurl.com/iKSbOE"
-                          title="Mailchimp - email marketing made easy and fun"
-                          ><span
-                            style="
-                              display: inline-block;
-                              background-color: transparent;
-                              border-radius: 4px;
-                            "
-                            ><img
-                              class="refferal_badge"
-                              src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                              alt="Intuit Mailchimp"
-                              style="
-                                width: 220px;
-                                height: 40px;
-                                display: flex;
-                                padding: 2px 0px;
-                                justify-content: center;
-                                align-items: center;
-                              " /></span
-                        ></a>
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-          
+  <!-- Call to action-->
+<aside class="bg-orange bg-gradient rounded-3 p-4 p-sm-5 mt-5">
+  <div
+    class="d-flex align-items-center justify-content-between flex-column flex-xl-row text-center text-xl-start"
+  >
+    <div class="mb-4 mb-xl-0">
+      <div class="fs-3 fw-bold">
+        New products and courses every year.
       </div>
-      
-            <div class="small text-white">
-              We care about privacy, and will never share your data.
+      <div>
+        Sign up to our newsletter for exclusive offers and updates.
+      </div>
+    </div>
+    <div id="mc_embed_shell">
+      <div id="mc_embed_signup">
+        <form
+          action="https://herokuapp.us11.list-manage.com/subscribe/post?u=d4616ca128cb857ad279711e3&amp;id=d8a843f98b&amp;f_id=00aab1e0f0"
+          method="post"
+          id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form"
+          class="validate"
+          target="_blank"
+        >
+          <div id="mc_embed_signup_scroll">
+            <div class="indicates-required text-dark">
+              <span class="asterisk">*</span> indicates required
             </div>
-        </div>
-      </aside>
+            <div class="mc-field-group text-dark fw-bolder">
+              <label for="mce-EMAIL"
+                >Email Address <span class="asterisk">*</span></label
+              ><input
+                type="email"
+                name="EMAIL"
+                class="required email"
+                id="mce-EMAIL"
+                required=""
+                value=""
+              /><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+            </div>
+            <div id="mce-responses" class="clear foot">
+              <div
+                class="response"
+                id="mce-error-response"
+                style="display: none"
+              ></div>
+              <div
+                class="response"
+                id="mce-success-response"
+                style="display: none"
+              ></div>
+            </div>
+            <div aria-hidden="true" style="position: absolute; left: -5000px">
+              /* real people should not fill this in and expect good things - do
+              not remove this or risk form bot signups */
+              <label for="bot-signup-input" style="display: none"
+                >Bot Signup Input</label
+              >
+              <input
+                type="text"
+                name="b_d4616ca128cb857ad279711e3_d8a843f98b"
+                id="bot-signup-input"
+                tabindex="-1"
+                value=""
+                aria-hidden="true"
+              />
+            </div>
+            <div class="optionalParent">
+              <div class="clear foot">
+                <input
+                  type="submit"
+                  name="subscribe"
+                  id="mc-embedded-subscribe"
+                  class="button"
+                  value="Subscribe"
+                />
+                <p style="margin: 0px auto">
+                  <a
+                    href="http://eepurl.com/iKSbOE"
+                    title="Mailchimp - email marketing made easy and fun"
+                    ><span
+                      style="
+                        display: inline-block;
+                        background-color: transparent;
+                        border-radius: 4px;
+                      "
+                      ><img
+                        class="refferal_badge"
+                        src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                        alt="Intuit Mailchimp"
+                        style="
+                          width: 220px;
+                          height: 40px;
+                          display: flex;
+                          padding: 2px 0px;
+                          justify-content: center;
+                          align-items: center;
+                        " /></span
+                  ></a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="small">
+      We care about privacy, and will never share your data.
+    </div>
+  </div>
+</aside>
+
     </div>
   </section>
 {% endblock %}
