Add facebook business page link #58

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     >
-    <meta name="description" content="" >
-    <meta name="author" content="" >
+    <meta name="description" content="Explore a world of coding-related products, online courses, and memberships. Unlock your coding potential with our diverse offerings.">
+    <meta name="author" content="Darrach Barneveld" >
+    <meta name="keywords" content="coding, products, online courses, memberships, programming, technology, coding gear, coding accessories">
     <title>Ci Swag{% block extra_title %}{% endblock %}</title>
       <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
@@ -115,7 +116,7 @@
 
               <a
               class="btn btn-outline-light m-1"
-              href="https://www.facebook.com/"
+              href="https://www.facebook.com/profile.php?id=61556561832434"
               role="button"
               target="_blank"
               aria-label="Link to our Facebook"
