--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -6,6 +6,8 @@
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
 {% endblock %}
 
+{% block extra_title %}Checkout{% endblock %}
+
 
 
 {% block page_header %}
@@ -26,12 +28,12 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Section-->
     <section class="container p-0">
       <div class="row">
         <div class="col-xl-8">
           <div class="card">
             <div class="card-body">
+              <!-- Checkout Form-->
               <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
                 <ol class="activity-checkout mb-0 px-4 mt-3">
@@ -171,6 +173,9 @@
             </div>
           </div>
         </div>
+
+
+        <!-- Order Summary-->
         <div class="col-xl-4">
           <div class="card checkout-order-summary">
             <div class="card-body">
@@ -246,6 +251,7 @@
      
   </section>
 
+      <!-- Loading Spinner -->
   <div id="loading-overlay">
     <div class="text-light logo-font loading-spinner">
         <span class="icon">
@@ -257,6 +263,7 @@
 
 
 
+<!-- Stripe handler scripts-->
 {% block postloadjs %}
 {{ block.super }}
 {{ stripe_public_key|json_script:"id_stripe_public_key" }}
