--- a/home/static/home/css/home.css
+++ b/home/static/home/css/home.css
@@ -1,9 +1,13 @@
+/* Hero Buttons */
+
 .btn.bg-orange:hover,
 .btn.bg-orange:focus {
   background: var(--secondary-orange);
   color: #fff;
   outline: 1px solid white;
 }
+
+/* Feature Icons */
 
 .feature {
   display: inline-flex;
