--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -171,6 +171,8 @@
         Sign up to our newsletter for exclusive offers and updates.
       </div>
     </div>
+
+     <!-- Mailchimp newsletter form-->
     <div id="mc_embed_shell">
       <div id="mc_embed_signup">
         <form
@@ -274,6 +276,9 @@
   </section>
 {% endblock %}
 
+
+
+<!-- Mailchimp newsletter Scripting-->
 
 {% block postloadjs %}
 {{ block.super }}
