--- a/home/templates/home/privacy.html
+++ b/home/templates/home/privacy.html
@@ -21,7 +21,7 @@
 {% endblock %}
 
 {% block content %}
- <!-- Features section-->
+ <!-- Privacy Policy -->
  <section class="py-5 bg-white" id="privacy">
     <div class='container'>  
     <h1>Privacy Policy</h1>
