--- a/profiles/templates/includes/confirm_modal.html
+++ b/profiles/templates/includes/confirm_modal.html
@@ -1,4 +1,4 @@
-<!-- Reusable Modal For All Delete confirmations  -->
+<!-- Modal for deleting subscriptions  -->
 <div
   class="modal fade"
   id="subscriptionModal"
