--- a/profiles/templates/includes/my_courses_card.html
+++ b/profiles/templates/includes/my_courses_card.html
@@ -1,3 +1,5 @@
+<!-- My Enrolled Courses Card -->
+
 <div class="col">
     <a class="card program-card shadow border-grey overflow-hidden" href="{% url 'program_detail' program.id %}" title='Link to {{program.name}}'>
       <article class="row">
