--- a/profiles/templates/profiles/my_courses.html
+++ b/profiles/templates/profiles/my_courses.html
@@ -2,6 +2,9 @@
 
 {% load static %}
 
+{% block extra_title %}My Courses{% endblock %}
+
+
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'profiles/css/profiles.css' %}">
 {% endblock %}
