--- a/profiles/templates/profiles/subscriptions.html
+++ b/profiles/templates/profiles/subscriptions.html
@@ -74,6 +74,8 @@
                 </ul>
                 <div class="footer">
 
+                    <!-- Remove membership on current subscription -->
+
                     {% if subscription.current %}
 
                     <button
