--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %} 
 {% load static %}
 
+{% block extra_title %}Order Confirmation{% endblock %}
+
 
  {% block extra_css %}
 <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
@@ -22,7 +24,7 @@
 <div class="overlay"></div>
 
 
-<div class="container mb-5">
+<section class="container mb-5">
   <div class="row">
     <div class="col">
       <hr>
@@ -34,6 +36,8 @@
       </p>
     </div>
   </div>
+
+  <!-- Order Infro-->
 
   <div class="row">
     <div class="col-12 col-lg-7">
@@ -204,5 +208,5 @@
   </div>
 
   
-</div>
+</section>
 {% endblock %}
