--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 <!--  -->
 {% load static %}
-<!--  -->
+
+{% block extra_title %}Profile{% endblock %}
+
+
 {% block page_header %}
 <header class="bg-dark">
   <div class="container px-4 px-lg-5 my-5">
@@ -36,6 +39,7 @@
                 <i class="fa-solid fa-user"></i>
               </div>
             </div>
+            <!-- User Form -->
             <form action="#" method="POST">
               {% csrf_token %}
               <h2 class="h5 mb-1">User Info</h2>
@@ -73,6 +77,7 @@
                 <i class="fa-solid fa-truck text-white"></i>
               </div>
             </div>
+            <!-- User Profile Form -->
             <form
               class="mt-3"
               action="#"
@@ -100,6 +105,9 @@
         </ol>
       </div>
     </div>
+
+
+    <!-- User Orders -->
 
     <div class="col-12 col-lg-6">
       <p><strong>Order History</strong></p>
