--- a/programs/templates/programs/program_detail.html
+++ b/programs/templates/programs/program_detail.html
@@ -29,6 +29,9 @@
     <div class="container px-4 px-lg-5 my-5">
       <div class="row gx-4 gx-lg-5 align-items-center">
         <div class="col-md-6">
+
+          <!-- Program Information  -->
+
           <div class="small mb-1">SKU: {{program.sku}}</div>
           <h2 class="display-5 fw-bolder">{{program.name}}</h2>
           <div class="fs-5 mb-3">
@@ -137,6 +140,9 @@
 
         </div>
         <div class="col-md-6">
+
+            <!-- Program Modules  -->
+
             <h2 class="text-center">What you will learn</h2>
     
             <p class='text-center fw-bolder text-primary'>Modules {{ program.modules.all|length }}</p>
