--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
     <meta name="author" content="Darrach Barneveld" >
     <meta name="keywords" content="coding, products, online courses, memberships, programming, technology, coding gear, coding accessories">
     <title>Ci Swag{% block extra_title %}{% endblock %}</title>
+
       <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
@@ -22,7 +23,7 @@
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
 
-
+    <!-- Core JS -->
   {% block corejs %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
@@ -79,7 +80,6 @@
     {% endblock %}
 
      <!-- Main Content-->
-
     <main class="flex-grow-1 bg-white">
     {% block content %}
     {% endblock %}
@@ -104,6 +104,7 @@
             </div>
           </div>
           <div class="col-auto">
+            <!-- Email Developer -->
             <a
                   class="btn btn-outline-light m-1"
                   href="mailto:darrachb1991@gmail.com"
@@ -113,7 +114,7 @@
                   >
                   <i class="fa fa-envelope"></i>
               </a>
-
+              <!-- Link to FB business page Field -->
               <a
               class="btn btn-outline-light m-1"
               href="https://www.facebook.com/profile.php?id=61556561832434"
@@ -123,10 +124,10 @@
 
               ><i class="fab fa-facebook-f"></i
             ></a>
-
+            <!-- Link to live repo-->
             <a
             class="btn btn-outline-light m-1"
-            href="https://github.com/DarrachBarneveld"
+            href="https://github.com/DarrachBarneveld/ci-swag"
             role="button"
             target="_blank"
             aria-label="Link to our Github"
@@ -137,6 +138,8 @@
         </div>
       </div>
     </footer>
+
+
     {% block postloadjs %}
     <script>
       $(document).ready(function() {
