--- a/static/css/base.css
+++ b/static/css/base.css
@@ -325,7 +325,7 @@ a:link {
   position: fixed;
   top: 100px;
   right: 15px;
-  z-index: 99999999999;
+  z-index: 99999;
   border-radius: 0.5rem;
   overflow: hidden;
   max-width: 310px;
