Validated html source code #55

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -197,7 +197,7 @@
                 id="mce-EMAIL"
                 required=""
                 value=""
-              /><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
+              ><span id="mce-EMAIL-HELPERTEXT" class="helper_text"></span>
             </div>
             <div id="mce-responses" class="clear foot">
               <div
@@ -224,7 +224,7 @@
                 tabindex="-1"
                 value=""
                 aria-hidden="true"
-              />
+              >
             </div>
             <div class="optionalParent">
               <div class="clear foot">
@@ -234,7 +234,7 @@
                   id="mc-embedded-subscribe"
                   class="button"
                   value="Subscribe"
-                />
+                >
                 <p style="margin: 0px auto">
                   <a
                     href="http://eepurl.com/iKSbOE"
@@ -256,7 +256,7 @@
                           padding: 2px 0px;
                           justify-content: center;
                           align-items: center;
-                        " /></span
+                        "></span
                   ></a>
                 </p>
               </div>
