--- a/profiles/templates/profiles/my_courses.html
+++ b/profiles/templates/profiles/my_courses.html
@@ -27,7 +27,9 @@
 <!--  -->
 
 {% block content %}
-<section class="cntainer py-5">
+<section class="container py-5">
+  <h2 class='text-dark text-center'>Active Courses</h2> 
+  <hr>
     <div class="container px-4 px-lg-5 mt-5">
 
       {% if programs|length == 0 %}
