--- a/profiles/templates/profiles/subscriptions.html
+++ b/profiles/templates/profiles/subscriptions.html
@@ -101,12 +101,12 @@
                         <i class="fa fa-check" aria-hidden="true"></i>
                         <span class="visually-hidden">Add to Cart</span>
                         </button>
-                        <input type="hidden" name="item_type" value="subscription" />
+                        <input type="hidden" name="item_type" value="subscription" >
                         <input
                         type="hidden"
                         name="redirect_url"
                         value="{{ request.path }}"
-                        />
+                        >
                     </form>
                     {% endif %}
 
