--- a/programs/templates/programs/programs.html
+++ b/programs/templates/programs/programs.html
@@ -49,6 +49,7 @@
 {% block content %}
     <!-- Program Info Section -->
     <section class="py-3 bg-white">
+      <h2 class='visually-hidden'>Programs</h2> 
 
         <!-- Search Bar -->
         {% url 'programs' as url %}
