--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -35,7 +35,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <form class="login card-body cardbody-color p-lg-5 mx-auto" method="POST" action="{% url 'account_login' %}">
   <div class="text-center">
     <img src="{% static 'images/logo.png' %}" class="img-fluid profile-image-pic img-thumbnail rounded-circle mb-2"
-      width="200px" alt="profile">
+       alt="profile">
   </div>
   {% csrf_token %}
   {{ form|crispy }}
